@@ -1,20 +1,14 @@
 package org.example.warehouse;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 public class Warehouse {
     private static final Map<String, Warehouse> instances = new HashMap<>();
     private final String name;
-    private final Map<UUID, ProductRecord> products = new ConcurrentHashMap<>();
-    private final Set<UUID> changedProducts = ConcurrentHashMap.newKeySet();
-
-
-    public static void main(String[] args) {
-    }
-
+    private final List<ProductRecord> products = new ArrayList<>();
 
     private Warehouse(String name) {
         this.name = name;
@@ -35,15 +29,16 @@ public class Warehouse {
     }
 
     public ProductRecord addProduct(UUID uuid, String name, Category category, BigDecimal price) {
-        if(uuid == null) {
-            uuid = UUID.randomUUID();
-        }
-        if (products.containsKey(uuid)) {
+        if (name == null || name.isEmpty()) throw new IllegalArgumentException("Product name can't be null or empty.");
+        if (category == null) throw new IllegalArgumentException("Category can't be null.");
+        uuid = Objects.requireNonNullElse(uuid, UUID.randomUUID());
+
+        final UUID finalId = uuid;
+        getProductByUuid(finalId).ifPresentOrElse(_ -> {
             throw new IllegalArgumentException("Product with that id already exists, use updateProduct for updates.");
-        }
-        ProductRecord product = new ProductRecord(uuid, name, category, price);
-        products.put(uuid, product);
-        return product;
+        }, () -> products.add(new ProductRecord(finalId, name, category, Objects.requireNonNullElse(price, BigDecimal.ZERO), null)));
+
+        return products.getLast();
     }
 
     public boolean isEmpty() {
@@ -51,43 +46,40 @@ public class Warehouse {
     }
 
     public List<ProductRecord> getProducts() {
-        if(products.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return List.copyOf(products.values()).reversed();
+        return List.copyOf(products);
     }
 
-    public Optional<ProductRecord> getProductById(UUID uuid) {
-        return Optional.ofNullable(products.get(uuid));
+
+    public Optional<ProductRecord> getProductByUuid(UUID uuid) {
+        List<ProductRecord> filteredProducts = products.stream().filter(product -> product.uuid().equals(uuid)).toList();
+        if (filteredProducts.isEmpty()) return Optional.empty();
+        return Optional.of(filteredProducts.getFirst());
     }
 
-    public void updateProductPrice(UUID uuid, BigDecimal newPrice) {
-        if (newPrice == null || newPrice.compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException();
-        }
-        ProductRecord product = products.get(uuid);
-        if (product == null) {
-            throw new IllegalArgumentException("Product with that id doesn't exist.");
-        }
-        changedProducts.add(uuid);
-        products.put(uuid, new ProductRecord(uuid, product.name(), product.category(), newPrice));
+    public void updateProductPrice(UUID uuid, BigDecimal price) {
+        getProductByUuid(uuid).ifPresentOrElse(product ->
+                        products.set(products.indexOf(product),
+                                new ProductRecord(product.uuid(),
+                                        product.name(),
+                                        product.category(),
+                                        price,
+                                        LocalDateTime.now()))
+                , () -> {
+                    throw new IllegalArgumentException("Product with that id doesn't exist.");
+                });
     }
 
     public List<ProductRecord> getChangedProducts() {
-        return products.values().stream()
-                .filter(product -> changedProducts.contains(product.uuid()))
-                .collect(Collectors.toList());
+        return products.stream().filter(product -> product.updatedAt() != null).toList();
     }
 
-
     public Map<Category, List<ProductRecord>> getProductsGroupedByCategories() {
-        return products.values().stream()
+        return products.stream()
                 .collect(Collectors.groupingBy(ProductRecord::category));
     }
 
     public List<ProductRecord> getProductsBy(Category category) {
-        return products.values().stream()
-                .filter(product -> product.category().equals(category))
-                .collect(Collectors.toList());
+        return products.stream().filter(product -> product.category().equals(category)).toList();
     }
 }
+
